--- a/Lab - Week 4.ipynb
+++ b/Lab - Week 4.ipynb
@@ -1377,7 +1377,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/3832337599.py:1: DeprecationWarning: `np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe. \n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/3832337599.py:1: DeprecationWarning: `np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe. \n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  categorical_df = customer_df.select_dtypes(np.object)\n"
      ]
@@ -2090,7 +2090,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/2689980691.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/2689980691.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  categorical_df.policy = categorical_df.policy.str.replace(\"\\w* \",'')\n"
      ]
     }
@@ -4471,7 +4471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/1849843642.py:2: DeprecationWarning: `np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe. \n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/1849843642.py:2: DeprecationWarning: `np.object` is a deprecated alias for the builtin `object`. To silence this warning, use `object` by itself. Doing this will not modify any behavior and is safe. \n",
       "Deprecated in NumPy 1.20; for more details and guidance: https://numpy.org/devdocs/release/1.20.0-notes.html#deprecations\n",
       "  pd.DataFrame(X_train_processed).select_dtypes(np.object)\n"
      ]
@@ -4968,7 +4968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4989,7 +4989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5003,20 +5003,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
       "  x = np.log10(x)\n",
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
       "  x = np.log10(x)\n",
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
       "  x = np.log10(x)\n",
-      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_6881/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
+      "/var/folders/v7/ctgngqdj6_j2cgx35nnddp8r0000gn/T/ipykernel_8884/312512766.py:2: RuntimeWarning: divide by zero encountered in log10\n",
       "  x = np.log10(x)\n"
      ]
     },
@@ -5270,7 +5270,7 @@
        "[9107 rows x 11 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5286,7 +5286,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Alternative:\n",
+    "# numerical_df_lab_5_log = np.log10(numerical_df_lab_5).where(numerical_df_lab_5_log.isin([np.inf, -np.inf]), '0', numerical_df_lab_5_log)\n",
+    "# numerical_df_lab_5_log = np.where(numerical_df_lab_5_log.isin([np.inf, -np.inf]), '0', numerical_df_lab_5_log)\n",
+    "# numerical_df_lab_5_log = pd.DataFrame(numerical_df_lab_5_log, columns=numerical_df_lab_5.columns)\n",
+    "# numerical_df_lab_5_log\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -5434,289 +5447,6 @@
     "- etd_week: litte difference\n",
     "- etd_month: litte difference"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>customer_lifetime_value</th>\n",
-       "      <th>income</th>\n",
-       "      <th>monthly_premium_auto</th>\n",
-       "      <th>months_since_last_claim</th>\n",
-       "      <th>months_since_policy_inception</th>\n",
-       "      <th>number_of_open_complaints</th>\n",
-       "      <th>number_of_policies</th>\n",
-       "      <th>total_claim_amount</th>\n",
-       "      <th>etd_day</th>\n",
-       "      <th>etd_week</th>\n",
-       "      <th>etd_month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3.441462</td>\n",
-       "      <td>4.750308</td>\n",
-       "      <td>1.838849</td>\n",
-       "      <td>1.505150</td>\n",
-       "      <td>0.698970</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.585248</td>\n",
-       "      <td>1.380211</td>\n",
-       "      <td>0.90309</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3.843827</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>1.973128</td>\n",
-       "      <td>1.113943</td>\n",
-       "      <td>1.623249</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.903090</td>\n",
-       "      <td>3.053641</td>\n",
-       "      <td>1.491362</td>\n",
-       "      <td>0.69897</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.110166</td>\n",
-       "      <td>4.688126</td>\n",
-       "      <td>2.033424</td>\n",
-       "      <td>1.255273</td>\n",
-       "      <td>1.579784</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.301030</td>\n",
-       "      <td>2.753179</td>\n",
-       "      <td>1.278754</td>\n",
-       "      <td>0.845098</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.883426</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>2.025306</td>\n",
-       "      <td>1.255273</td>\n",
-       "      <td>1.812913</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.845098</td>\n",
-       "      <td>2.724179</td>\n",
-       "      <td>1.301030</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>0.00000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>3.449277</td>\n",
-       "      <td>4.641831</td>\n",
-       "      <td>1.863323</td>\n",
-       "      <td>1.079181</td>\n",
-       "      <td>1.643453</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.140291</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>0.69897</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9129</th>\n",
-       "      <td>4.369327</td>\n",
-       "      <td>4.856976</td>\n",
-       "      <td>1.863323</td>\n",
-       "      <td>1.255273</td>\n",
-       "      <td>1.949390</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.301030</td>\n",
-       "      <td>2.297180</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.778151</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9130</th>\n",
-       "      <td>3.490873</td>\n",
-       "      <td>4.334534</td>\n",
-       "      <td>1.897627</td>\n",
-       "      <td>1.146128</td>\n",
-       "      <td>1.447158</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.578868</td>\n",
-       "      <td>1.079181</td>\n",
-       "      <td>0.778151</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9131</th>\n",
-       "      <td>3.911897</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>1.929419</td>\n",
-       "      <td>0.954243</td>\n",
-       "      <td>1.568202</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>0.301030</td>\n",
-       "      <td>2.898058</td>\n",
-       "      <td>0.778151</td>\n",
-       "      <td>0.69897</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9132</th>\n",
-       "      <td>3.876474</td>\n",
-       "      <td>4.341256</td>\n",
-       "      <td>1.982271</td>\n",
-       "      <td>1.531479</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>2.839604</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>0.69897</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9133</th>\n",
-       "      <td>3.416946</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>1.886491</td>\n",
-       "      <td>0.477121</td>\n",
-       "      <td>1.954243</td>\n",
-       "      <td>-inf</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2.567732</td>\n",
-       "      <td>1.146128</td>\n",
-       "      <td>0.845098</td>\n",
-       "      <td>0.30103</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9107 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      customer_lifetime_value    income  monthly_premium_auto  \\\n",
-       "0                    3.441462  4.750308              1.838849   \n",
-       "1                    3.843827      -inf              1.973128   \n",
-       "2                    4.110166  4.688126              2.033424   \n",
-       "3                    3.883426      -inf              2.025306   \n",
-       "4                    3.449277  4.641831              1.863323   \n",
-       "...                       ...       ...                   ...   \n",
-       "9129                 4.369327  4.856976              1.863323   \n",
-       "9130                 3.490873  4.334534              1.897627   \n",
-       "9131                 3.911897      -inf              1.929419   \n",
-       "9132                 3.876474  4.341256              1.982271   \n",
-       "9133                 3.416946      -inf              1.886491   \n",
-       "\n",
-       "      months_since_last_claim  months_since_policy_inception  \\\n",
-       "0                    1.505150                       0.698970   \n",
-       "1                    1.113943                       1.623249   \n",
-       "2                    1.255273                       1.579784   \n",
-       "3                    1.255273                       1.812913   \n",
-       "4                    1.079181                       1.643453   \n",
-       "...                       ...                            ...   \n",
-       "9129                 1.255273                       1.949390   \n",
-       "9130                 1.146128                       1.447158   \n",
-       "9131                 0.954243                       1.568202   \n",
-       "9132                 1.531479                       0.477121   \n",
-       "9133                 0.477121                       1.954243   \n",
-       "\n",
-       "      number_of_open_complaints  number_of_policies  total_claim_amount  \\\n",
-       "0                          -inf            0.000000            2.585248   \n",
-       "1                          -inf            0.903090            3.053641   \n",
-       "2                          -inf            0.301030            2.753179   \n",
-       "3                          -inf            0.845098            2.724179   \n",
-       "4                          -inf            0.000000            2.140291   \n",
-       "...                         ...                 ...                 ...   \n",
-       "9129                       -inf            0.301030            2.297180   \n",
-       "9130                       -inf            0.000000            2.578868   \n",
-       "9131                   0.477121            0.301030            2.898058   \n",
-       "9132                       -inf            0.477121            2.839604   \n",
-       "9133                       -inf            0.000000            2.567732   \n",
-       "\n",
-       "       etd_day  etd_week  etd_month  \n",
-       "0     1.380211   0.90309    0.30103  \n",
-       "1     1.491362   0.69897    0.00000  \n",
-       "2     1.278754  0.845098    0.30103  \n",
-       "3     1.301030  0.477121    0.00000  \n",
-       "4     0.477121   0.69897    0.30103  \n",
-       "...        ...       ...        ...  \n",
-       "9129  1.000000  0.778151    0.30103  \n",
-       "9130  1.079181  0.778151    0.30103  \n",
-       "9131  0.778151   0.69897    0.30103  \n",
-       "9132  0.477121   0.69897    0.30103  \n",
-       "9133  1.146128  0.845098    0.30103  \n",
-       "\n",
-       "[9107 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 117,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "numerical_df_lab_5\n",
-    "numerical_df_lab_5_log = np.log10(numerical_df_lab_5)\n",
-    "numerical_df_lab_5_log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "numerical_df_lab_5_log = numerical_df_lab_5_log.replace([np.inf, -np.inf], 0, inplace=True)\n",
-    "numerical_df_lab_5_log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
